--- a/templates/playlists_index.html
+++ b/templates/playlists_index.html
@@ -1,5 +1,8 @@
 {% extends 'base.html'%}
 
+
+<a href='/playlists/new'>New Playlist</a>
+
 {% block content %}
     <h1>Playlists </h1>
     {% for playlist in playlists%}
