--- a/templates/playlists_index.html
+++ b/templates/playlists_index.html
@@ -6,7 +6,7 @@
 {% block content %}
     <h1>Playlists </h1>
     {% for playlist in playlists%}
-        <h2> {{ playlist.title}} </h2>
+        <h2><a href='/playlists/{{ playlist._id }}'>{{ playlist.title }}</a></h2>
         <small> {{ playlist.description }} </small>
     {% endfor %}
 {% endblock %}
