--- a/templates/playlists_index.html
+++ b/templates/playlists_index.html
@@ -5,8 +5,12 @@
 
 {% block content %}
     <h1>Playlists </h1>
-    {% for playlist in playlists%}
-        <h2><a href='/playlists/{{ playlist._id }}'>{{ playlist.title }}</a></h2>
-        <small> {{ playlist.description }} </small>
-    {% endfor %}
+    <div class='row'>
+        {% for playlist in playlists%}
+            <div class='col-md-3'>
+                <h2><a href='/playlists/{{ playlist._id }}'>{{ playlist.title }}</a></h2>
+                <small>{{ playlist.description }}</small>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
