--- a/templates/partials/comment_form.html
+++ b/templates/partials/comment_form.html
@@ -1,6 +1,9 @@
 <!-- templates/partials/comment_form.html -->
 
-<form>
+<!-- templates/partials/comment_form.html -->
+
+<form action='/playlists/comments' method='POST'>
+    <input type='hidden' value='{{ playlist._id }}' name='playlist_id'/>
     <fieldset>
         <legend>Add a Comment</legend>
         <!-- TITLE -->
@@ -20,7 +23,7 @@
                 id='comment-content'
                 name='content'
                 rows='10'
-                placeholder='Your comment...'/></textarea>
+                placeholder='Your comment...'></textarea>
         </div>
     </fieldset>
 
